...
    <string name="title_expansions">Expansions</string>
    <string name="title_adventures">Adventures</string>
    <string name="title_reddit">Reddit</string>

    <string name="action_refresh">Refresh</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">ALL CARDS</string>
    <string name="tab_text_2">Tab 2</string>
...
